--- a/now.json
+++ b/now.json
@@ -1,1 +1,1 @@
-{"version":2,"name":"Expro","builds":[{"src":"**/*.js","use":"@now/node"}]}
+{"version":2,"name":"Expro","builds":[{"src":"**/*.js","use":"@now/node"},{ "src": "*.html", "use": "@now/static" }]}
