--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+    "node":"8.9.3"
+  },
+  "now":{
+    "engines":{
+      "node":"8.9.3"
+    }
+  },
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
